<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Family Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
	<string name="send_address_button">Send Address</string>
	<string name="send_location_button">Send Location</string>
	<string name="text_field">Text:  </string>
	<string name="phone_number">Phone Number:  </string>
	<string name="number_hint">10 digit phone number here.</string>
	<string name="instruction">Please choose \'Send Location\' if the receiver has this app. Your location will be plot on receiver\'s map. </string>
</resources>
